tests/ui/typeck/typeck-default-trait-impl-send-param.stderr
error[E0277]: `T` cannot be sent between threads safely
  --> $DIR/typeck-default-trait-impl-send-param.rs:5:15
   |
LL |     is_send::<T>()
   |               ^ `T` cannot be sent between threads safely
   |
note: required by a bound in `is_send`
  --> $DIR/typeck-default-trait-impl-send-param.rs:8:14
   |
LL | fn is_send<T:Send>() {
   |              ^^^^ required by this bound in `is_send`
help: consider restricting type parameter `T` with trait `Send`
   |
LL | fn foo<T: std::marker::Send>() {
   |         +++++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
